# CICD

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: calculator.py
docs/: 02-core-cicd-concepts.md
tests/: test_calculator.py
